#163: Ensure component visibility in mobile view for item editor

--- a/Frontend/ShoppingList.Frontend.WebApp/Components/Index/Summary.razor.less
+++ b/Frontend/ShoppingList.Frontend.WebApp/Components/Index/Summary.razor.less
@@ -1,4 +1,6 @@
-﻿.summary-header .summary-date-picker {
+﻿@import '../../wwwroot/css/general/sizes.less';
+
+.summary-header .summary-date-picker {
     padding-right: 5px;
 }
 
@@ -42,7 +44,7 @@
     .summary {
         margin-right: 4px;
         padding-bottom: 4px;
-        margin-bottom: 63.15px;
+        margin-bottom: @mobile-menu-height;
     }
 
     .price-sum {
