--- a/Frontend/ShoppingList.Frontend.WebApp/Pages/Items/ItemEditor.razor.less
+++ b/Frontend/ShoppingList.Frontend.WebApp/Pages/Items/ItemEditor.razor.less
@@ -1,6 +1,8 @@
 ﻿@import '../../wwwroot/css/general/colors.less';
+@import '../../wwwroot/css/general/sizes.less';
 
 .item-editor {
     max-width: 600px;
     margin: 0 auto;
+    padding-bottom: @mobile-menu-height + 8px;
 }
